<resources>
    <string name="app_name">YoYo</string>
    <string name="tv_complete_info_main_title">Please Complete your Information</string>
    <string name="account_information">Acount Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="email">Email</string>
    <string name="tv_complete_info_personal_country">Country/Region</string>
    <string name="tv_complete_info_personal_date_of_birth">Date of Birth(optional)</string>
    <string name="et_complete_info_personal_introducer_code">Introducer\'\s Code(optional)</string>
    <string name="button_complete_info_personal_submit">Submit</string>
    <string name="tv_mainpage_services">Booking Services •</string>
    <string name="tv_mainpage_available_services">2 services for now</string>
    <string name="tv_mainpage_more_services">more services is coming soon</string>
    <string name="hotels">Hotels</string>
    <string name="trips">Trips</string>
    <string name="button_mainpage_flights">Flights</string>
    <string name="button_mainpage_specialOffers">Offers</string>
    <string name="tv_hotelsearch_title">Staying anywhere?</string>
    <string name="search">Search</string>
    <string name="button_hotelsearch_datepicker_from">Check-in</string>
    <string name="button_hotelsearch_datepicker_to">Check-out</string>
    <string name="tv_specialoffers_title">Special Offers</string>
    <string name="tv_signup_title">Welcom to Yoyo</string>
    <string name="button_signup_google">Sign in with Google</string>
    <string name="button_signup_facebook">Sign in with Facebook</string>
    <string name="button_signup_loginasguest">Login As Guest</string>
    <string name="tv_item_hotel_name">Hotel Name</string>
    <string name="tv_item_hotel_type">Type :</string>
    <string name="tv_item_hotel_address">City, District :</string>
    <string name="tv_item_hotel_price">Price :</string>
    <string name="from_small">from</string>
    <string name="navigation_bn_order">Orders</string>
    <string name="navigation_bn_home">Home</string>
    <string name="navigation_bn_profile">Profile</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="tv_item_destination" translatable="false">Destination</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="tv_item_capacity" translatable="false">Capacity</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="tv_item_language" translatable="false">Language</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="picker_box_arrows_icon">picker box arrows icon</string>
    <string name="cell_image">cell image</string>
    <string name="subtitle">New iOS and Android control for you and your company. Please make sure to use it properly,
        if you have any questions, please create an issue on our GitHub account.
    </string>
    <string name="customized_picker">Here a fully customized picker with custom background and cell layout:</string>
    <string name="picker_with_custom_bg">Here a picker with default cell but custom background:</string>
    <string name="footer_text">by Ramotion inc.</string>
    <string name="tv_hotefilter_facilities">Hotel Facilities :</string>
    <string name="tv_filterhotel_parking">Parking</string>
    <string name="tv_filterhotel_pool">Pool</string>
    <string name="tv_filterhotel_garden">Garden</string>
    <string name="tv_filterhotel_hotel_quality">Hotel Quality :</string>
    <string name="tv_filterhotel_pricerange">Price Range (per Room,per Night) :</string>
    <string name="button_filterhotel">Apply</string>
    <string name="tv_tripsearch_trip">Trip</string>
    <string name="tv_tripsearch_title">Find your Trip</string>
    <string name="tv_date_picker_check_in">Check-in</string>
    <string name="tv_date_picker_check_out">Check-out</string>
    <string name="tv_datepicker_select_date">Select Date</string>
    <string name="trip_leader">Trip Leader</string>
    <string name="buton_trip_item_big_details">Details</string>
    <string name="tv_trip_item_big_start_date">Start date</string>
    <string name="tv_trip_item_big_end_date">End date</string>
    <string name="button_profile_sign_out">Sign Out</string>
    <string name="button_profile_report_an_app_problem">Report an app problem</string>
    <string name="button_profile_setting">Setting</string>
    <string name="button_profile_rules">Rules</string>
    <string name="button_profile_trlavlers_list">Travel Companions</string>
    <string name="button_profile_edit_profile">Edit Profile</string>
    <string name="tv_sign_out">Are you sure you want to Sign Out?</string>
    <string name="tv_about_city_title">About City</string>
    <string name="server_client_id">181467561755-7uedee591j3jcb4pj09u79t70akkkn0t.apps.googleusercontent.com</string>
    <string name="tv_hotel_details_des">Description:</string>
    <string name="tv_hotel_details_rules">Rules:</string>
    <string name="change_the_language">change the language</string>
    <string name="iran">Iran</string>
    <string name="hotel_near_me">Hotel near me</string>
    <string name="filter_by_price_optional">Filter by price (optional)</string>
    <string name="going_anywhere">Going anywhere?</string>
    <string name="trip_near_me">Trip near me</string>
    <string name="what_are_you_looking_for">What are you looking for...?</string>
    <string name="search_with_dot">Search...</string>
    <string name="nights">Nights</string>
    <string name="results">Results</string>
    <string name="from_capital">From</string>
    <string name="to">to</string>
    <string name="reset">Reset</string>
    <string name="advanture">Advanture</string>
    <string name="health">Health</string>
    <string name="nature">Nature</string>
    <string name="sport">Sport</string>
    <string name="food">Food</string>
    <string name="trip_language">Trip Language :</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="edit_traveller">Edit Traveller</string>
    <string name="ticket">Ticket</string>
    <string name="flight">Flight</string>
    <string name="my_profile">My Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="traveller_info">Traveller Info</string>
    <string name="payment">Payment</string>
    <string name="success">Success</string>
    <string name="check_out">Check Out</string>
    <string name="total_price">Total Price</string>
    <string name="continue_booking">Continue Booking</string>
    <string name="staying_dates">Select Date</string>
    <string name="check_in">Check-In</string>
    <string name="register_with_us_and">Register with us and</string>
    <string name="get_exclusive_deals_and_offers">get exclusive deals and offers</string>
    <string name="add_traveller">Add Traveller</string>
    <string name="select_traveller_from_your_acount">Select Traveller From your Account</string>
    <string name="or">Or</string>
    <string name="traveller_1_adult">Traveller 1 (Adult)</string>
    <string name="choose_a_bank_portal">Choose a Bank Portal</string>
    <string name="thank_you">Thank you</string>
    <string name="your_payment_has_been_successfully_processed">Your Payment has been successfully processed!</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth_optional">Date of Birth (optional)</string>
    <string name="introducer_code">Introducer Code</string>
    <string name="are_you_sure_you_want_to_exit">Are You Sure you want to</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="search_flights">Search flights</string>
    <string name="flight_details">Flight Details</string>
    <string name="book_now">Book Now</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="infant">Infant</string>
    <string name="book">Book</string>
    <string name="total_price_button">Total Price:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remainingCapacity">Capacity</string>
    <string name="flight_class">Flight Class</string>
    <string name="flight_no">Flight NO</string>
    <string name="flight_path">Flight Path</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="all_trips">All Trips</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="flying_rewards">Flying Rewards</string>
    <string name="travel_companions">Travel Companions</string>
    <string name="rules">Rules</string>
    <string name="setting">Setting</string>
    <string name="report_an_app_problem">Report an App Problem</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_or_username">Email or Username</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="travellers">Travellers</string>
    <string name="travellers_companions">Travellers Companions</string>
    <string name="edit_travellers">Edit Traveller</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="country">Country</string>
    <string name="iranian_national_code">Iranian National Code</string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_expiry_date">Passport Expiry Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel_this_transaction">cancel this transaction?</string>
    <string name="cancel_2">cancel</string>
    <string name="new_version_available">New version available</string>
    <string name="please_update_your_app_to_new_version">Please update your app to new version.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="update">Update</string>
    <string name="continue_without_sign_up">continue without Sign up?</string>
</resources>