<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="150dp"
                                                   android:minWidth="250dp"
                                                   android:minHeight="150dp">


    <TextView
            android:text="@string/are_you_sure_you_want_to_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="@dimen/header_2" android:textColor="@color/black1"/>
    <TextView
            android:text="@string/cancel_this_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_2" android:textColor="@color/black1"
            android:id="@+id/textView39"
            app:layout_constraintStart_toStartOf="@+id/textView18" app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
    />
    <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView39"
            android:id="@+id/button_exitdialog_yes" app:layout_constraintEnd_toStartOf="@+id/button_exitdialog_no"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
    />
    <Button
            android:text="@string/no"
            android:textColor="@color/black1"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/button_exitdialog_no"
            android:background="@drawable/border_gray"
            app:layout_constraintStart_toEndOf="@+id/button_exitdialog_yes" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_exitdialog_yes" app:layout_constraintBottom_toBottomOf="@+id/button_exitdialog_yes"/>
</androidx.constraintlayout.widget.ConstraintLayout>