<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="150dp"
                                                   android:minWidth="250dp"
                                                   android:minHeight="150dp">


    <TextView
            android:text="@string/new_version_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="@dimen/header_1" android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"/>
    <TextView
            android:text="@string/please_update_your_app_to_new_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_2" android:textColor="@color/black"
            android:id="@+id/tv_update_dialog_message"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:layout_marginTop="8dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_update_dialog_message"
            android:id="@+id/button_update_dialog_update" app:layout_constraintEnd_toStartOf="@+id/button_update_dialog_no"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/no_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:id="@+id/button_update_dialog_no"
            android:background="@drawable/border_gray"
            app:layout_constraintStart_toEndOf="@+id/button_update_dialog_update" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_update_dialog_update"
            app:layout_constraintBottom_toBottomOf="@+id/button_update_dialog_update"/>
</androidx.constraintlayout.widget.ConstraintLayout>