<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="yoyo.app.android.com.yoyoapp.ProfileFragment"
    tools:layout_editor_absoluteY="25dp"
    android:background="@color/background"
    android:layout_marginBottom="50dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/iv_edit_profile_img_shape"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:shape_roundRect_bottomLeftRadius="50dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_topLeftRadius="50dp"
        app:shape_roundRect_topRightRadius="50dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar" />
    </com.github.florent37.shapeofview.shapes.RoundRectView>


    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/header_0"
        app:layout_constraintBottom_toTopOf="@+id/iv_edit_profile_img_shape"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        android:text="@string/client_name_mock" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="edward.norton@gmail.com"
        android:textColor="@color/black4"
        android:textSize="@dimen/standard"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <Button
        android:id="@+id/button_profile_edit_profile"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_edit_profile"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_profile_img_shape" />

    <Button
        android:id="@+id/button_profile_travellers_list"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_trlavlers_list"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_edit_profile" />

    <Button
        android:id="@+id/button_profile_edit_rules"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_rules"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_travellers_list" />

    <Button
        android:id="@+id/button_profile_setting"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_setting"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_edit_rules" />

    <Button
        android:id="@+id/button_profile_report_a_problem"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_report_an_app_problem"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_setting" />

    <Button
        android:id="@+id/button_profile_log_out"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ds_bg_list_selector"
        android:text="@string/button_profile_sign_out"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_report_a_problem" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <include layout="@layout/fragment_signup"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>