<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardCornerRadius="8dp"
    android:elevation="2dp"
    android:layout_marginStart="@dimen/standard_margin"
    android:layout_marginEnd="@dimen/standard_margin"
    android:layout_marginBottom="14dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:background="@android:color/transparent"
    android:foreground="?attr/selectableItemBackgroundBorderless">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.github.florent37.shapeofview.shapes.RoundRectView
            android:id="@+id/shapeiv_hotel_item"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:layout_marginEnd="@dimen/standard_margin"
            app:shape_roundRect_bottomLeftRadius="10dp"
            app:shape_roundRect_bottomRightRadius="10dp"
            app:shape_roundRect_topLeftRadius="10dp"
            app:shape_roundRect_topRightRadius="10dp"
            app:shape_roundRect_borderColor="@android:color/black"
            app:shape_roundRect_borderWidth="1dp">

            <ImageView
                android:id="@+id/iv_hotel_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_hotel" />


        </com.github.florent37.shapeofview.shapes.RoundRectView>


        <TextView
            android:id="@+id/tv_hotel_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/shapeiv_hotel_item"
            android:text="@string/tv_item_hotel_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_font_size"
            />

        <RatingBar
            android:id="@+id/ratingBar_hotel_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_below="@+id/tv_hotel_item_name"
            android:layout_toEndOf="@+id/shapeiv_hotel_item"
            android:theme="@style/RatingBar"/>

        <TextView
            android:id="@+id/tv_hotel_item_address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar_hotel_item"
            android:layout_toEndOf="@+id/shapeiv_hotel_item"
            android:text="@string/tv_item_hotel_address"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            />
        <TextView
            android:id="@+id/tv_hotel_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar_hotel_item"
            android:layout_toEndOf="@+id/tv_hotel_item_address1"
            android:text="Palang Shahr, Palang Sq."
            android:maxLength="25"
            android:layout_marginStart="4dp"
            android:textAllCaps="false"
            android:textSize="@dimen/small"
            />
        <TextView
            android:id="@+id/tv_hotel_item_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hotel_item_address"
            android:layout_toEndOf="@+id/shapeiv_hotel_item"
            android:text="@string/tv_item_hotel_type"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            />
        <TextView
            android:id="@+id/tv_hotel_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_below="@id/tv_hotel_item_address"
            android:layout_toEndOf="@+id/tv_hotel_item_type1"
            android:text="Hotel"
            android:maxLength="20"
            android:textAllCaps="false"
            android:textSize="@dimen/small"
            />
        <TextView
        android:id="@+id/tv_hotel_item_price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hotel_item_type"
        android:layout_toEndOf="@+id/shapeiv_hotel_item"
        android:text="@string/tv_item_hotel_price"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/tv_hotel_item_price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hotel_item_type"
            android:layout_toEndOf="@+id/tv_hotel_item_price1"
            android:text="@string/from_small"
            android:textAllCaps="false"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/tv_hotel_item_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_below="@id/tv_hotel_item_type"
            android:layout_toEndOf="@+id/tv_hotel_item_price2"
            android:text="40$"
            android:textAllCaps="false"
            android:maxLength="20"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/tv_hotel_item_new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_below="@id/tv_hotel_item_type"
            android:layout_toEndOf="@+id/tv_hotel_item_old_price"
            android:text="38$"
            android:textAllCaps="false"
            android:maxLength="20"
            android:textSize="@dimen/small" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>